<resources>
    <string name="app_name">TaskMate</string>
    <string name="login">Login</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Add Task</string>
    <string name="task_name_hint">Task Name</string>
    <string name="task_date_hint">Select Date</string>
    <string name="task_time_hint">Select Time</string>
    <string name="task_type_hint">Task Type</string>
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>
    <string name="confirm_delete_task">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_task_added">New task added</string>
    <string name="completed_task">Completed</string>
    <string name="ongoing_task">Ongoing</string>
    <string name="pinned_task">Pinned</string>
    <string name="stopwatch_start">Start</string>
    <string name="stopwatch_pause">Pause</string>
    <string name="stopwatch_reset">Reset</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="register_now">Register now!</string>
    <string name="first_name_hint">First Name</string>
    <string name="signup">Signup</string>
    <string name="hello_user">Hello, User!</string>
    <string name="mobile_number">Mobile: 0000000000</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="inbox_title">Hello User!</string>
    <string name="calender_title">Calender</string>
    <string name="timer">Timer</string>
    <string name="ongoing_label">ONGOING</string>
    <string name="completed_label">COMPLETED</string>
    <string name="add_task_button_desc">Floating Button</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="delete_account">Delete Account</string>



</resources>